# Portfolio

./: README.md
Portfolio/: README.txt
Portfolio/Cool_Compiler/: README.txt
Portfolio/Cool_Compiler/WorkingAST/src/: AST.java  Clazz.java  Cool.cup  Makefile  TableManager.java  TypeError.java  sym.java
Portfolio/Cool_Compiler/WorkingCodeGenerator/.metadata/: version.ini
Portfolio/Cool_Compiler/WorkingCodeGenerator/src/: Cool.cup  (+18 more)
Portfolio/Cool_Compiler/WorkingScannerParser/: Cool.cup  Cool.java  Cool.jflex  Makefile  README.txt
Portfolio/Interpreters/: dang-interp.sml  dangREADME.txt  satisfyREADME.txt
Portfolio/Machine_Learning/: nb.java  perceptron.java
Portfolio/Machine_Learning/Kaggle_project/: blender.java  nbcombined.java  nbmultinomial.java  weightedknn.java
Portfolio/Mercury_Precession/: README.txt
Portfolio/MySQL_Power_Grid_Simulation/: README.txt  grid.sql  sample_queries.txt
Portfolio/Rasterizer/: README.txt
Portfolio/Shell/: README.txt  arrayParse.h
Portfolio/Volume_Renderer/: CMakeLists.txt  volumeRenderer.cxx
src/: README.txt
src/Cool_Compiler/: README.txt
src/Cool_Compiler/StartingMaterials/: Cool.jflex
src/Interpreters/: interp.sml  interpREADME.txt  interp_lazy.sml  interp_lazy_static.sml  interp_static.sml  satisfy.sml
src/Machine_Learning/: ID3.java  README.txt  lg.java
src/Machine_Learning/Kaggle_project/: basicknn.java  nbtest.java  weballknn.java
src/Rasterizer/: CMakeLists.txt  rasterizer.cxx
src/Shell/: adshell.c  arrayParse.c  redirectionExecution.c  redirectionExecution.h
src/Volume_Renderer/: README.txt
(+98 files in other folders)
